--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@
 cmake-build-debug/.ninja_deps
 cmake-build-debug/.ninja_log
 *.log
+*.log
+cmake-build-debug/.ninja_deps
+cmake-build-debug/.ninja_log
