--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(BFCompiler)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(BFCompiler main.cpp Interpreter.cpp Interpreter.h)
+add_executable(BFCompiler main.cpp Interpreter.cpp)
